--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - master
+  pull_request:
+    branches:
+      - master
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -25,6 +28,14 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist-files
+          path: |
+            dist
+            package.json
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
