--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -32,13 +32,20 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: dist-files
-          path: |
-            dist
-            package.json
+          # path: |
+          #   dist
+          #   package.json
+            path: dist
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Download Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: dist-files
+      - name: Display structure of downloaded files
+        run: ls -R
       - name: Deploy
         run: echo "Deploying..."
