--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -21,6 +21,8 @@ jobs:
   build:
     needs: test
     runs-on: ubuntu-latest
+    outputs:
+      script-file: ${{ steps.publish.outputs.script-file }}
     steps:
       - name: Get code
         uses: actions/checkout@v3
@@ -28,6 +30,9 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
+      - name: Publish JS filename
+        id: publish
+        run: find dist/assets/*.js -type -execdir echo 'script-file={}' >> $GITHUB_OUTPUT ';'
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
@@ -46,5 +51,7 @@ jobs:
           name: dist-files
       - name: Display structure of downloaded files
         run: ls -R
+      - name: Output filename
+        run: echo "${{ needs.build.outputs.script-file }}" # example showing how to pass data between jobs
       - name: Deploy
         run: echo "Deploying..."
